--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                                     <li>Menjadi pendamping dan figur orang tua rohani.</li>
                                     <li>Mengawasi jalannya program agar sesuai visi misi.</li>
                                     <li>Menjembatani komunikasi dengan Gembala & Majelis.</li>
+                                    <li>Memberikan masukan strategis.</li>
                                 </ul>
                             </div>
                         </details>
@@ -471,7 +472,7 @@
                                 Detail Teknis <i class="fas fa-chevron-down transform group-open:rotate-180 transition"></i>
                             </summary>
                             <ul class="mt-2 text-gray-600 space-y-1 list-disc ml-4 text-xs">
-                                <li><strong>Aktivitas:</strong> Mencari Telur (isi ayat hafalan) di halaman gereja.</li>
+                                <li><strong>Aktivitas:</strong> Mencari Telur di area gereja.</li>
                                 <li><strong>Logistik:</strong> Cukup 2 Lusin telur plastik. Pastikan 16 orang dapat semua.</li>
                                 <li><strong>Hadiah:</strong> Cokelat sederhana.</li>
                             </ul>
@@ -501,9 +502,8 @@
                                 Detail Teknis <i class="fas fa-chevron-down transform group-open:rotate-180 transition"></i>
                             </summary>
                             <ul class="mt-2 text-gray-600 space-y-1 list-disc ml-4 text-xs">
-                                <li><strong>Jenis:</strong> Cerdas Cermat Individu (Kahoot/Kertas).</li>
-                                <li><strong>Kenapa Individu?</strong> Karena peserta 16 orang, buat kompetisi perorangan agar semua berpikir.</li>
-                                <li><strong>Materi:</strong> Pengetahuan Alkitab Dasar.</li>
+                                <li><strong>Tujuan:</strong> Mengasah pengetahuan Alkitab dengan cara yang menyenangkan.</li>
+                                <li><strong>Format:</strong> Bebas (bisa tim/individu) menyesuaikan situasi dan persiapan panitia.</li>
                             </ul>
                         </details>
                     </div>
@@ -583,8 +583,8 @@
                                 Detail Teknis <i class="fas fa-chevron-down transform group-open:rotate-180 transition"></i>
                             </summary>
                             <ul class="mt-2 text-gray-600 space-y-1 list-disc ml-4 text-xs">
-                                <li><strong>Tim:</strong> Bagi menjadi 4 Tim (per tim 4 orang). Pas.</li>
-                                <li><strong>Games:</strong> Estafet Sarung atau Tebak Kata Alkitab.</li>
+                                <li><strong>Tujuan:</strong> Membangun kekompakan tim dan semangat nasionalisme.</li>
+                                <li><strong>Jenis Permainan:</strong> Bebas (Indoor/Outdoor) menyesuaikan kondisi dan kreativitas panitia.</li>
                                 <li><strong>Biaya:</strong> Murah meriah (Hadiah kerupuk/snack).</li>
                             </ul>
                         </details>
@@ -668,8 +668,8 @@
                                 Detail Teknis <i class="fas fa-chevron-down transform group-open:rotate-180 transition"></i>
                             </summary>
                             <ul class="mt-2 text-gray-600 space-y-1 list-disc ml-4 text-xs">
-                                <li><strong>Game:</strong> "Benang Kusut". Lempar gulungan benang ke teman sambil sebut 1 ucapan syukur.</li>
-                                <li><strong>Hasil:</strong> Membentuk jaring laba-laba yang simbolnya "Kita saling terhubung". Sangat pas untuk 16 orang.</li>
+                                <li><strong>Fokus:</strong> Aktivitas ringan yang memancing setiap anggota untuk saling terbuka dan mengucap syukur.</li>
+                                <li><strong>Format:</strong> Menyesuaikan kreativitas pemimpin acara.</li>
                             </ul>
                         </details>
                     </div>
