--- a/index.html
+++ b/index.html
@@ -386,6 +386,64 @@
         </div>
     </section>
 
+    <!-- Cleaning Group Section (NEW) -->
+    <section class="max-w-6xl mx-auto px-4 py-8">
+        <div class="bg-white rounded-xl shadow-md p-6 border-t-4 border-cyan-500">
+            <h2 class="text-2xl font-bold text-gray-800 mb-6 flex items-center">
+                <i class="fas fa-broom text-cyan-600 mr-3"></i>Jadwal Kebersihan Gereja
+            </h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                
+                <!-- Kelompok 1 -->
+                <div class="bg-cyan-50 rounded-lg p-5 border border-cyan-200">
+                    <div class="flex items-center mb-4">
+                        <span class="w-8 h-8 rounded-full bg-cyan-600 text-white flex items-center justify-center font-bold text-sm mr-3">1</span>
+                        <h3 class="font-bold text-lg text-cyan-900">Kelompok 1</h3>
+                    </div>
+                    <ul class="space-y-2 text-sm text-gray-700">
+                        <li class="flex items-center"><i class="fas fa-check text-cyan-500 mr-2 text-xs"></i> Laudya Iroth</li>
+                        <li class="flex items-center"><i class="fas fa-check text-cyan-500 mr-2 text-xs"></i> Briando Maki</li>
+                        <li class="flex items-center"><i class="fas fa-check text-cyan-500 mr-2 text-xs"></i> Gloria Rembet</li>
+                        <li class="flex items-center"><i class="fas fa-check text-cyan-500 mr-2 text-xs"></i> Rifky Tidayoh</li>
+                        <li class="flex items-center"><i class="fas fa-check text-cyan-500 mr-2 text-xs"></i> Josafat Tidayoh</li>
+                    </ul>
+                </div>
+
+                <!-- Kelompok 2 -->
+                <div class="bg-teal-50 rounded-lg p-5 border border-teal-200">
+                    <div class="flex items-center mb-4">
+                        <span class="w-8 h-8 rounded-full bg-teal-600 text-white flex items-center justify-center font-bold text-sm mr-3">2</span>
+                        <h3 class="font-bold text-lg text-teal-900">Kelompok 2</h3>
+                    </div>
+                    <ul class="space-y-2 text-sm text-gray-700">
+                        <li class="flex items-center"><i class="fas fa-check text-teal-500 mr-2 text-xs"></i> Ribka Sumolang</li>
+                        <li class="flex items-center"><i class="fas fa-check text-teal-500 mr-2 text-xs"></i> Delon Tidayoh</li>
+                        <li class="flex items-center"><i class="fas fa-check text-teal-500 mr-2 text-xs"></i> Kezia Jacob</li>
+                        <li class="flex items-center"><i class="fas fa-check text-teal-500 mr-2 text-xs"></i> Elsa Mokobimbing</li>
+                        <li class="flex items-center"><i class="fas fa-check text-teal-500 mr-2 text-xs"></i> Novita Sumolang</li>
+                    </ul>
+                </div>
+
+                <!-- Kelompok 3 -->
+                <div class="bg-blue-50 rounded-lg p-5 border border-blue-200">
+                    <div class="flex items-center mb-4">
+                        <span class="w-8 h-8 rounded-full bg-blue-600 text-white flex items-center justify-center font-bold text-sm mr-3">3</span>
+                        <h3 class="font-bold text-lg text-blue-900">Kelompok 3</h3>
+                    </div>
+                    <ul class="space-y-2 text-sm text-gray-700">
+                        <li class="flex items-center"><i class="fas fa-check text-blue-500 mr-2 text-xs"></i> Tiara Todingbua</li>
+                        <li class="flex items-center"><i class="fas fa-check text-blue-500 mr-2 text-xs"></i> Efraim Sumolang</li>
+                        <li class="flex items-center"><i class="fas fa-check text-blue-500 mr-2 text-xs"></i> Avril Tidayoh</li>
+                        <li class="flex items-center"><i class="fas fa-check text-blue-500 mr-2 text-xs"></i> Samuel</li>
+                        <li class="flex items-center"><i class="fas fa-check text-blue-500 mr-2 text-xs"></i> Maria Manampiring</li>
+                        <li class="flex items-center"><i class="fas fa-check text-blue-500 mr-2 text-xs"></i> Citra Tidayoh</li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <!-- Calendar Grid -->
     <main class="max-w-6xl mx-auto px-4 py-10">
         <h2 class="text-3xl font-bold text-center mb-10 text-gray-800">Timeline Kegiatan <span class="gradient-text">2026</span></h2>
